--- a/src/main/webapp/WEB-INF/views/people/id.html
+++ b/src/main/webapp/WEB-INF/views/people/id.html
@@ -7,16 +7,15 @@
 <body>
 
 <p th:text="${person.getName()}">VALUE</p>
-<p th:text="${person.getAge()}">VALUE</p>
-<p th:text="${person.getEmail()}">VALUE</p>
-<p th:text="${person.getId()}">VALUE</p>
+<p th:text="${person.getDateOfBirth()}">VALUE</p>
+<p th:text="${person.getPersonid()}">VALUE</p>
 
 <!--id we get from model-->
-<a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
+<a th:href="@{/people/{id}/edit(id=${person.getPersonid()})}">Edit</a>
 
-<!--DELETE request cound be sent only from FORM-->
+<!--DELETE request could be sent only from FORM-->
 </br>
-<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
+<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getPersonid()})}">
     <input type="submit" value="Delete!">
 </form>
 
