--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -15,14 +15,9 @@
     <input type="text" th:field=*{name} id="name">
     <div style="color:orange" th:if="${#fields.hasErrors('name')}"  th:errors="*{name}" >name error</div>
     <br/>
-    <label for="age">Enter your age</label>
-    <input type="text" th:field=*{age} id="age">
-    <div style="color:orange" th:if="${#fields.hasErrors('age')}" th:errors="*{age}" >age error</div>
-    <br/>
-    <label for="email">Email:</label>
-    <input type="text" th:field=*{email} id="email">
-    <div style="color:orange" th:if="${#fields.hasErrors('email')}" th:errors="*{email}" >email error</div>
-    <br/>
+    <label for="date">Enter date of birth</label>
+    <input type="text" th:field=*{dateOfBirth} id="date">
+    <div style="color:orange" th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateofbirth}" >age error</div>
     <br/>
     <input type="submit" value="Create new person!">
 
