--- a/src/main/webapp/WEB-INF/views/book/index.html
+++ b/src/main/webapp/WEB-INF/views/book/index.html
@@ -2,12 +2,15 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<title>Books list</title>
 </head>
 <body>
 <div th:each="book : ${books}">
-	<a th:text="${book.getTitle() + ', ' + book.getAuthor() + ', ' + book.getYear()}"/>
+	<a th:href="@{/books/{id}(id=*{book.getBookid})}"
+			th:text="${book.getTitle() + ', ' + book.getAuthor() + ', ' + book.getYear()}">Book info</a>
 </div>
+	<br/>
+	<a href="new">Create new book</a>
 
 </body>
 </html>
