--- a/src/main/webapp/WEB-INF/views/book/id.html
+++ b/src/main/webapp/WEB-INF/views/book/id.html
@@ -22,8 +22,15 @@
 		<input type="submit" value="Borrow book">
 	</form>
 	<hr/>
+	<!--button for freeing book-->
+	<form th:method="PATCH" th:action="@{/books/freeFromPerson/{bookid}(bookid=${book.getBookid()})}">
+		<input type="submit" value="Free book">
+	</form>
+	<hr/>
+	<!--edit book link-->
 	<a th:href="@{/books/{bookid}/edit(bookid=${book.getBookid()})}">Edit book</a>
 	<br/>
+	<!--delete book butoon-->
 	<form th:method="DELETE" th:action="@{/books/{bookid}(bookid=${book.getBookid()})}">
 		<input type="submit" value="Delete">
 	</form>
