books - show who have the book

--- a/src/main/webapp/WEB-INF/views/book/id.html
+++ b/src/main/webapp/WEB-INF/views/book/id.html
@@ -11,21 +11,27 @@
 	book.getBookid()}">
 	</b>
 	<br/>
+	<hr/>
 	<!--form for choosing user for book-->
-	<form th:method="PATCH" th:action="@{/books/addToPerson/{bookid}(bookid=${book.getBookid()})}">
+	<span th:if="${book.getPersonOwnerId() == 0}">
+		<span>This book is free. Who want to take it?</span>
+		<form th:method="PATCH" th:action="@{/books/addToPerson/{bookid}(bookid=${book.getBookid()})}">
 		<label for="personList">Choose a person</label>
 		<select th:object="${personX}" th:field=*{personid} id="personList">
 			<option th:each="person : ${personList}" th:value="${person.getPersonid()}"
-			th:text="${person.getName()}"
+			        th:text="${person.getName()}"
 			></option>
 		</select>
 		<input type="submit" value="Borrow book">
 	</form>
-	<hr/>
-	<!--button for freeing book-->
-	<form th:method="PATCH" th:action="@{/books/freeFromPerson/{bookid}(bookid=${book.getBookid()})}">
+	</span>
+<!--button for freeing book-->
+	<span th:if="${book.getPersonOwnerId() > 0}">
+		<span th:text="'The person, who get the book: ' + ${owner.getName()}"></span>
+		<form th:method="PATCH" th:action="@{/books/freeFromPerson/{bookid}(bookid=${book.getBookid()})}">
 		<input type="submit" value="Free book">
 	</form>
+	</span>
 	<hr/>
 	<!--edit book link-->
 	<a th:href="@{/books/{bookid}/edit(bookid=${book.getBookid()})}">Edit book</a>
