--- a/src/main/webapp/WEB-INF/views/book/new.html
+++ b/src/main/webapp/WEB-INF/views/book/new.html
@@ -8,12 +8,15 @@
 <form th:method="POST" th:action="@{/books}" th:object="${book}">
 	<label for="titleInput">Books title</label>
 	<input type="text" th:field="*{title}" id="titleInput">
+	<div style="color:coral" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</div>
 	</br>
 	<label for="authorInput">Year</label>
 	<input type="text" th:field="*{author}" id="authorInput">
+	<div style="color:brown" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">author errors</div>
 	</br>
 	<label for="yearInput">Year</label>
 	<input type="text" th:field="*{year}" id="yearInput">
+	<div style="color:brown" th:if="${#fields.hasErrors('year')}" th:errors="*{year}">year errors</div>
 	</br>
 	<input type="submit" value="Create new book in the library">
 </form>
